--- a/LeBonA7.html
+++ b/LeBonA7.html
@@ -74,8 +74,16 @@
   </script>
 
 </body>
-</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Plateforme d'Achat et Vente</title>
+</head>
+<body>
 
+  <nav>
+    <select onchange="showSection(this.value)">
       <option value="" selected disabled>Choisissez une option</option>
       <option value="publier.html">Publier une Annonce</option>
       <option value="annonces.html">Annonces</option>
@@ -89,4 +97,5 @@
 
 </body>
 </html>
+
 
