--- a/LeBonA7.html
+++ b/LeBonA7.html
@@ -79,7 +79,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Plateforme d'Achat et Vente</title>
-</head>
+<!--</head>
 <body>
 
   <nav>
@@ -95,7 +95,7 @@
     <p>Plateforme d'Achat et Vente &copy; 2023</p>
   </footer>
 
-</body>
+</body>-->
 </html>
 
 
